src/ast/snapshots/lakonik__parser__parser__tests__parse_statement_snapshot@john-_run.snap
---
source: src/parser/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 9
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 9
  name: john-
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 6
    end:
      line: 1
      offset: 9
  name: run
parts: []
