src/ast/snapshots/lakonik__parser__parser__tests__parse_statement_snapshot@qwen3_edit_$(ls)_foo.snap
---
source: src/parser/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 20
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 20
  name: qwen3
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 6
    end:
      line: 1
      offset: 20
  name: edit
parts:
  - InlineShell:
      type: inline_shell
      range:
        start:
          line: 1
          offset: 11
        end:
          line: 1
          offset: 20
      code: ls
  - Freeform:
      type: freeform
      range:
        start:
          line: 1
          offset: 17
        end:
          line: 1
          offset: 20
      text: foo
