src/ast/snapshots/lakonik__parser__parser__tests__parse_statement_snapshot@qwen3_edit_@hello.txt_foo.snap
---
source: src/parser/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 25
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 25
  name: qwen3
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 6
    end:
      line: 1
      offset: 25
  name: edit
parts:
  - FilePath:
      type: filepath
      range:
        start:
          line: 1
          offset: 11
        end:
          line: 1
          offset: 25
      path: hello.txt
  - Freeform:
      type: freeform
      range:
        start:
          line: 1
          offset: 22
        end:
          line: 1
          offset: 25
      text: foo
